--- a/todo.txt
+++ b/todo.txt
@@ -2,4 +2,5 @@ get the wand:
     minecraft:warped_fungus_on_a_stick{sorcery.wand:1s,spell:[]}
 
 make the spells
+    shulkershoot, shulker_bullet.Target = uuid de la cible
 make the animations, GOOD animations!
