--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,77 @@
 make the coldron
 make the crafts
-enchant the wand
+	cauldron:
+		fermanted spider eye
+		golden carrot
+		glistering melong slice
+		gunpowder
+		nautilus shell
+	max mana upgrade:
+		lapis lazuli
+		heart of the sea
+		diamond
+		glass bottle
+		dried kelp block
+	mana cooldown upgrade:
+		turtle egg
+		diamond block
+		emerald block
+		nether star
+		heart of the sea
+	magic wand:
+		stick
+		gunpowder
+		rabbit foot
+		ender pearl
+		ghast tear
+		phantom membrane
+	fireblaze:
+		 firework star
+		dead fire coral fan
+		fire charge
+		flint
+		coal
+	shulker shot:
+		lead
+		name tag
+		nether wart
+		purple dye
+		shulker shell
+	lightning bolt:
+		iron bars
+		zombie head
+		redstone block
+		iron trapdoor
+		bell
+	evoker fang:
+		emerald
+		cobblestone
+		diamond ore
+		obsidian
+		iron axe
+	dragon shot:
+		dragon head
+		dragon breath
+		firework star
+		fermanted spider eye
+		ender pearl
+	heal:
+		dragon breath
+		nether wart
+		glistering melon slice
+		sugar
+		enchanted golden apple
+	fast travel:
+		ender chest
+		ender pearl
+		ghast tear
+		totem of undying
+		diamond
 make the spells:
 	godspell
 make the magic aura
 make the animations, GOOD animations!
 succes
+	coldron
+book of crafts (cause they are to complex)
+textures
